--- a/zensar.html
+++ b/zensar.html
@@ -2,7 +2,7 @@
 <html lang="en" style="width:100%; height:100%;"> 
 <head> 
   <meta http-equiv="content-type" content="text/html; charset=utf-8"> 
-    <title>Mritunjay's Resume</title> 
+    <title>Zensar Training Certificate</title> 
  </head> 
 <body style="width:100%; height:100%; margin:0;"> 
     <iframe src="https://github.com/mritunjay-tomar/resume/raw/main/Zensar%20Certificate.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe> 
