--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,6 @@
     <title>Mritunjay's Resume</title> 
  </head> 
 <body style="width:100%; height:100%; margin:0;"> 
-    <iframe src="https://docs.google.com/gview?url=https://github.com/mritunjay-tomar/resume/raw/main/MritunjayTomar.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe> 
+    <iframe src="https://github.com/mritunjay-tomar/resume/raw/main/Mritunjay%20Tomar.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe> 
 </body> 
 </html>
